# langchain-cookbook

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CN.md  README.md  README_CN.md  gen_notebook_s04.py  gen_notebooks.py  gen_notebooks_cn.py  main.py  pyproject.toml
common/: __init__.py  env.py  llm.py  tracing.py
examples/: __init__.py
examples/notebooks/: s_01_llm_with_tools.ipynb  s_02_research_agent.ipynb  s_03_agent_harness.ipynb  s_04_rag.ipynb  s_05_human_in_the_loop.ipynb  s_06_multi_agent_subagents.ipynb  s_07_multi_agent_router.ipynb  s_08_thinking_in_langgraph.ipynb
examples/notebooks_cn/: s_01_llm_with_tools.ipynb  s_02_research_agent.ipynb  s_03_agent_harness.ipynb  s_04_rag.ipynb  s_05_human_in_the_loop.ipynb  s_06_multi_agent_subagents.ipynb  s_07_multi_agent_router.ipynb  s_08_thinking_in_langgraph.ipynb
examples/s_01_llm_with_tools/: README.md  __init__.py  __main__.py  main.py
examples/s_02_research_agent/: README.md  __init__.py  __main__.py  main.py
examples/s_03_agent_harness/: README.md  __init__.py  __main__.py  main.py
