[project]
name = "langchain-cookbook"
version = "0.1.0"
description = "A collection of LangChain / LangGraph examples from the official documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "langfuse>=2.0",
    "python-dotenv>=1.0",
    "tavily-python>=0.3",
    "deepagents>=0.6.10",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "langchain-text-splitters>=0.3",
    "beautifulsoup4>=4.12",
]
